[package]
name = "windowimages"
version = "1.0.0"
description = "Set custom images as backgrounds using WindowImages!"
authors = ["KoxSosen"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1", features = [] }

[dependencies]
tauri = { version = "1", features = ["shell-open", "system-tray"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wallpaper = { version = "3", features = ["from_url"] }
os_info = "3"
cronjob = "0.4.17"
windows-taskscheduler = { git = "https://github.com/j-hc/windows-taskscheduler-api-rust.git" }

[features]
# This feature is used for production builds or when a dev server is not specified, DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
